[package]
name = "pump"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["json"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
clap = { version = "4.6.1", features = ["derive", "deprecated"] }
env_logger = "0.11.10"
jiff = { version = "0.2.24", features = ["serde"] }
log = "0.4.29"
num_cpus = "1.17.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tempfile = "3.27.0"
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"

[lints]
clippy.large_enum_variant = "allow"
